Push code len de lay ve tu laptop

--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -78,12 +78,12 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link active">Home</a>
-                    <a href="about-logged.html" class="nav-item nav-link">About Us</a>
-                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
+                    <a href="loggedin.html" class="nav-item nav-link active">Trang chủ</a>
+                    <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
 
-                    <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
@@ -216,19 +216,19 @@
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
                 <h2 class="text-primary font-secondary">Menu & Pricing</h2>
-                <h1 class="display-4 text-uppercase" style="color: white;">Explore Our Cakes</h1>
+                <h1 class="display-4 text-uppercase" style="color: white;">Các món bánh mới</h1>
             </div>
             <div class="tab-class text-center">
                 <ul
                     class="nav nav-pills d-inline-flex justify-content-center bg-dark text-uppercase border-inner p-4 mb-5">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" data-bs-toggle="pill" href="#tab-1">Birthday</a>
+                        <a class="nav-link text-white active" data-bs-toggle="pill" href="#tab-1">Bánh sinh nhật</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-2">Wedding</a>
+                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-2">Bánh cưới</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Snack</a>
+                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Bánh ăn nhẹ</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -688,24 +688,22 @@
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
                                 <a class="text-secondary mb-2" href="about-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Giới thiệu</a>
                                 <a class="text-secondary mb-2" href="team-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp chính</a>
                                 <a class="text-secondary mb-2" href="contact-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Liên hệ</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
                             <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                    <button class="btn btn-primary">Sign Up</button>
+                                    <input type="text" class="form-control border-white p-3" placeholder="Email">
+                                    <button class="btn btn-primary">Đăng ký</button>
                                 </div>
                             </form>
                         </div>
