--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-envelope fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Email Us</h6>
+                        <h6 class="text-uppercase mb-1">Email</h6>
                         <span>info@example.com</span>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Call Us</h6>
+                        <h6 class="text-uppercase mb-1">Di động</h6>
                         <span>+012 345 6789</span>
                     </div>
                 </div>
@@ -78,18 +78,18 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="pages/index.html" class="nav-item nav-link active">Home</a>
-                    <a href="pages/about.html" class="nav-item nav-link">About Us</a>
-                    <a href="pages/birthday-cake-1.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="pages/team.html" class="nav-item nav-link">Master Chefs</a>
+                    <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
+                    <a href="pages/about.html" class="nav-item nav-link">Giới thiệu</a>
+                    <a href="pages/birthday-cake-1.html" class="nav-item nav-link">Sản phẩm</a>
+                    <a href="pages/team.html" class="nav-item nav-link">Đầu bếp chính</a>
 
-                    <a href="pages/contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="pages/contact.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
 
                 <!-- Login/Signup bên phải -->
                 <div class="navbar-nav ms-auto">
-                    <a href="pages/login.html" class="nav-item nav-link">Login</a>
-                    <a href="pages/signup.html" class="nav-item nav-link">Signup</a>
+                    <a href="pages/login.html" class="nav-item nav-link">Đăng nhập</a>
+                    <a href="pages/signup.html" class="nav-item nav-link">Đăng ký</a>
                 </div>
             </div>
         </div>
@@ -192,8 +192,6 @@
 
 
 
-
-
     <!-- Products Start -->
     <div class="container-fluid py-5 mb-5">
         <div class="container">
@@ -226,10 +224,8 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase"><a href="pages/birthday-cake-1.html">Birthday
-                                                Cake</a></h5>
-                                        <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
-                                            justo</span>
+                                        <h5 class="text-uppercase"><a href="pages/birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Vừa Ngọt</a></h5>
+                                        <span>Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho những bữa tiệc nhỏ ấm cúng.</span>
                                     </div>
                                 </div>
                             </div>
@@ -504,32 +500,13 @@
     </div>
     <!-- Products End -->
 
-
     <!-- Service Start -->
-    <div class="container-fluid service position-relative px-5 mt-5" style="margin-bottom: 135px;">
+    <div class="container-fluid service position-relative px-5 mt-5" style="margin-bottom: 20px;">
         <div class="container">
             <div class="row g-5">
-                <!-- Pagination -->
-                <div class="d-flex justify-content-center mt-4">
-                    <nav aria-label="Cake list pages">
-                        <ul class="pagination">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1">Previous</a>
-                            </li>
-                            <li class="page-item active">
-                                <a class="page-link" href="birthday-cake-1.html">1</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="birthday-cake-2.html">2</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="birthday-cake-3.html">3</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="birthday-cake-2.html">Next</a>
-                            </li>
-                        </ul>
-                    </nav>
+                <!-- Nút xem thêm -->
+                <div class="text-center mt-5">
+                    <button class="btn btn-outline-primary" onclick="window.location.href='pages/birthday-cake-1.html'">Xem thêm</button>
                 </div>
             </div>
         </div>
@@ -541,8 +518,8 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-                <h2 class="text-primary font-secondary">Team Members</h2>
-                <h1 class="display-4 text-uppercase">Our Master Chefs</h1>
+                <h2 class="text-primary font-secondary">Đội ngũ</h2>
+                <h1 class="display-4 text-uppercase">Đầu bếp</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
@@ -563,7 +540,7 @@
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
                             <h4 class="text-uppercase text-primary">John Constatine</h4>
-                            <p class="text-white m-0">Head Chef</p>
+                            <p class="text-white m-0">Đầu bếp chính</p>
                         </div>
                     </div>
                 </div>
@@ -585,7 +562,7 @@
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
                             <h4 class="text-uppercase text-primary">Michael Smith</h4>
-                            <p class="text-white m-0">Pastry Chef</p>
+                            <p class="text-white m-0">Đầu bếp bánh</p>
                         </div>
                     </div>
                 </div>
@@ -607,7 +584,7 @@
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
                             <h4 class="text-uppercase text-primary">Jane Doe</h4>
-                            <p class="text-white m-0">Head Baker</p>
+                            <p class="text-white m-0">Đầu bếp chính</p>
                         </div>
                     </div>
                 </div>
@@ -628,10 +605,13 @@
                             <h1 class="m-0 text-uppercase text-white"><i
                                     class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
-                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
-                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
-                            eos duo dolore no.</p>
+                        <p class="mt-3" style="text-align: justify;">Chào mừng bạn đến với CakeZone – không gian của
+                            những hương vị ngọt ngào và tinh
+                            tế.
+                            Chúng tôi mang đến những chiếc bánh sinh nhật, bánh cưới và bánh ngọt cao cấp như mousse,
+                            flan, gato, được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày.
+                            Tại CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà mang theo niềm vui và sự
+                            yêu thương.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -663,23 +643,21 @@
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="index.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
                                 <a class="text-secondary mb-2" href="pages/about.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Giới thiệu</a>
                                 <a class="text-secondary mb-2" href="pages/team.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp chính</a>
                                 <a class="text-secondary mb-2" href="pages/contact.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Liên hệ</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
                             <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
+                                    <input type="text" class="form-control border-white p-3" placeholder="Email">
                                     <button class="btn btn-primary">Sign Up</button>
                                 </div>
                             </form>
