--- a/pages/birthday-cake-detail-1.html
+++ b/pages/birthday-cake-detail-1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -187,6 +187,8 @@
     </div>
   </nav>
   <!-- Navbar End -->
+
+  <!-- Product Detail Start -->
   <div class="container mt-5">
     <div class="row">
       <!-- Breadcrumb -->
@@ -198,7 +200,7 @@
             </a>
           </li>
           <li class="breadcrumb-item mb-0">
-            <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+            <a href="birthday-cake-1.html" class="text-decoration-none text-primary fw-semibold">
               Bánh sinh nhật
             </a>
           </li>
@@ -299,7 +301,7 @@
 
     </div>
   </div>
-
+  <!-- Product Detail End -->
 
 
   <!-- Footer Start -->
@@ -464,4 +466,4 @@
 </html>
 </head>
 
-</html>
+</html>>
