Push code len de lay ve tu laptop

--- a/pages/snack-cake-detail-1.html
+++ b/pages/snack-cake-detail-1.html
@@ -200,8 +200,8 @@
             </a>
           </li>
           <li class="breadcrumb-item mb-0">
-            <a href="birthday-cake-1.html" class="text-decoration-none text-primary fw-semibold">
-              Bánh sinh nhật
+            <a href="snack-cake-1.html" class="text-decoration-none text-primary fw-semibold">
+              Bánh ăn nhẹ
             </a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">Chi tiết</li>
@@ -209,12 +209,12 @@
       </nav>
       <!-- Product Images -->
       <div class="col-md-4 mb-4">
-        <img src="../img/bdcake-1.jpg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage" />
+        <img src="../img/snack-12.jpeg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage" />
       </div>
 
       <!-- Product Details -->
       <div class="col-md-6">
-        <h2 class="mb-3">Bánh Sinh Nhật Socola Vừa Ngọt</h2>
+        <h2 class="mb-3">Bánh Cưới Vừa Ngọt</h2>
 
         <div class="mb-3">
           <span class="h4 me-2">$45.99</span>
@@ -494,8 +494,6 @@
       });
     });
   </script>
-
-
 </body>
 
 </html>
