--- a/pages/snack-cake-1-logged.html
+++ b/pages/snack-cake-1-logged.html
@@ -217,7 +217,7 @@
                   <!-- Cake 1 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/snack-1.jpg" class="card-img-top" alt="Birthday Cake 1" />
+                      <img src="../img/snack-12.jpeg" class="card-img-top" alt="Birthday Cake 1" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
