--- a/pages/birthday-cake-2-logged.html
+++ b/pages/birthday-cake-2-logged.html
@@ -77,7 +77,7 @@
         </div>
         <div class="col-lg-4 text-center bg-primary border-inner py-3">
           <div class="d-inline-flex align-items-center justify-content-center">
-            <a href="../index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -114,13 +114,13 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto mx-lg-auto py-0">
-            <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
-            <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-            <a href="birthday-cake-1.html" class="nav-item nav-link active"
+            <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+            <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+            <a href="birthday-cake-1-logged.html" class="nav-item nav-link active"
               >Sản phẩm</a
             >
-            <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
-            <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+            <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+            <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
           </div>
 
           <!-- Shopping cart + Avatar menu bên phải -->
@@ -173,7 +173,7 @@
             <ol class="breadcrumb bg-light p-6 rounded mb-0">
               <li class="breadcrumb-item mb-0">
                 <a
-                  href="../index.html"
+                  href="loggedin.html"
                   class="text-decoration-none text-primary fw-semibold"
                 >
                   <i class="bi bi-house-door-fill me-1"></i> Trang chủ
@@ -226,17 +226,17 @@
               aria-labelledby="menuDropdown"
             >
               <li>
-                <a class="dropdown-item" href="birthday-cake-1.html"
+                <a class="dropdown-item" href="birthday-cake-1-logged.html"
                   >Bánh sinh nhật</a
                 >
               </li>
               <li>
-                <a class="dropdown-item" href="wedding-cake-1.html"
+                <a class="dropdown-item" href="wedding-cake-1-logged.html"
                   >Bánh cưới</a
                 >
               </li>
               <li>
-                <a class="dropdown-item" href="snack-cake-1.html"
+                <a class="dropdown-item" href="snack-cake-1-logged.html"
                   >Bánh ăn nhẹ</a
                 >
               </li>
@@ -627,7 +627,7 @@
             <div
               class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4"
             >
-              <a href="../index.html" class="navbar-brand">
+              <a href="loggedin.html" class="navbar-brand">
                 <h1 class="m-0 text-uppercase text-white">
                   <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i
                   >CakeZone
@@ -676,19 +676,19 @@
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                 <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                 <div class="d-flex flex-column justify-content-start">
-                  <a class="text-secondary mb-2" href="../index.html"
+                  <a class="text-secondary mb-2" href="loggedin.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Trang
                     chủ</a
                   >
-                  <a class="text-secondary mb-2" href="about.html"
+                  <a class="text-secondary mb-2" href="about-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Giới
                     thiệu Us</a
                   >
-                  <a class="text-secondary mb-2" href="birthday-cake-1.html"
+                  <a class="text-secondary mb-2" href="birthday-cake-1-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Sản
                     phẩm</a
                   >
-                  <a class="text-secondary mb-2" href="contact.html"
+                  <a class="text-secondary mb-2" href="contact-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Liên
                     hệ</a
                   >
