--- a/pages/snack-cake-detail-1-logged.html
+++ b/pages/snack-cake-detail-1-logged.html
@@ -144,7 +144,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -174,11 +174,11 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
-          <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-          <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
-          <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+          <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
         <!-- Shopping cart + Avatar menu bên phải -->
@@ -218,13 +218,13 @@
       <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
           <li class="breadcrumb-item mb-0">
-            <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+            <a href="loggedin.html" class="text-decoration-none text-primary fw-semibold">
               <i class="bi bi-house-door-fill me-1"></i> Trang chủ
             </a>
           </li>
           <li class="breadcrumb-item mb-0">
-            <a href="wedding-cake-1.html" class="text-decoration-none text-primary fw-semibold">
-              Bánh cưới
+            <a href="snack-cake-1-logged.html" class="text-decoration-none text-primary fw-semibold">
+              Bánh ăn nhẹ
             </a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">Chi tiết</li>
@@ -232,7 +232,7 @@
       </nav>
       <!-- Product Images -->
       <div class="col-md-4 mb-4">
-        <img src="../img/wdcake-1.jpg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage" />
+        <img src="../img/snack-12.jpeg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage" />
       </div>
 
       <!-- Product Details -->
@@ -334,7 +334,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -377,13 +377,13 @@
                 Truy cập nhanh
               </h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="../index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
-                <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>Giới
+                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Giới
                   thiệu</a>
-                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i
+                <a class="text-secondary mb-2" href="birthday-cake-1-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Sản phẩm</a>
-                <a class="text-secondary mb-2" href="contact.html"><i
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Liên hệ</a>
               </div>
             </div>
@@ -410,15 +410,6 @@
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function changeImage(event, src) {
-      document.getElementById("mainImage").src = src;
-      document
-        .querySelectorAll(".thumbnail")
-        .forEach((thumb) => thumb.classList.remove("active"));
-      event.target.classList.add("active");
-    }
-  </script>
   <!-- Bootstrap Modal -->
   <div class="modal fade" id="cartSuccessModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -452,7 +443,6 @@
       });
     });
   </script>
-
 </body>
 
 </html>
