--- a/pages/wedding-cake-2-logged.html
+++ b/pages/wedding-cake-2-logged.html
@@ -68,7 +68,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -98,11 +98,11 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
-          <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-          <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
-          <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+          <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
         <!-- Shopping cart + Avatar menu bên phải -->
@@ -144,7 +144,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-light p-6 rounded mb-0">
             <li class="breadcrumb-item mb-0">
-              <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+              <a href="loggedin.html" class="text-decoration-none text-primary fw-semibold">
                 <i class="bi bi-house-door-fill me-1"></i> Trang chủ
               </a>
             </li>
@@ -182,13 +182,13 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="menuDropdown">
             <li>
-              <a class="dropdown-item" href="birthday-cake-1.html">Bánh sinh nhật</a>
+              <a class="dropdown-item" href="birthday-cake-1-logged.html">Bánh sinh nhật</a>
             </li>
             <li>
-              <a class="dropdown-item" href="wedding-cake-1.html">Bánh cưới</a>
+              <a class="dropdown-item" href="wedding-cake-1-logged.html">Bánh cưới</a>
             </li>
             <li>
-              <a class="dropdown-item" href="snack-cake-1.html">Bánh ăn nhẹ</a>
+              <a class="dropdown-item" href="snack-cake-1-logged.html">Bánh ăn nhẹ</a>
             </li>
           </ul>
         </div>
@@ -259,13 +259,13 @@
               <img src="../img/wdcake-9.jpg" class="card-img-top" alt="Wedding Cake 1" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Socola Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -281,13 +281,13 @@
               <img src="../img/wdcake-10.jpg" class="card-img-top" alt="Wedding Cake 2" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Vani Trái Cây</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -303,13 +303,13 @@
               <img src="../img/wdcake-11.jpg" class="card-img-top" alt="Wedding Cake 3" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -325,13 +325,13 @@
               <img src="../img/wdcake-12.jpg" class="card-img-top" alt="Wedding Cake 4" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -347,13 +347,13 @@
               <img src="../img/wdcake-13.jpeg" class="card-img-top" alt="Wedding Cake 5" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Socola Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -369,13 +369,13 @@
               <img src="../img/wdcake-14.jpeg" class="card-img-top" alt="Wedding Cake 6" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Vani Trái Cây</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -391,13 +391,13 @@
               <img src="../img/wdcake-7.jpg" class="card-img-top" alt="Wedding Cake 7" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -413,13 +413,13 @@
               <img src="../img/wdcake-8.jpg" class="card-img-top" alt="Wedding Cake 8" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -440,19 +440,19 @@
     <nav aria-label="Cake list pages">
       <ul class="pagination">
         <li class="page-item">
-          <a class="page-link" href="wedding-cake-1.html" tabindex="-1">Trang trước</a>
+          <a class="page-link" href="wedding-cake-1-logged.html" tabindex="-1">Trang trước</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="wedding-cake-1.html">1</a>
+          <a class="page-link" href="wedding-cake-1-logged.html">1</a>
         </li>
         <li class="page-item active">
-          <a class="page-link" href="wedding-cake-2.html">2</a>
+          <a class="page-link" href="wedding-cake-2-logged.html">2</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="wedding-cake-3.html">3</a>
+          <a class="page-link" href="wedding-cake-3-logged.html">3</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="wedding-cake-3.html">Trang sau</a>
+          <a class="page-link" href="wedding-cake-3-logged.html">Trang sau</a>
         </li>
       </ul>
     </nav>
@@ -465,7 +465,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="../index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -504,15 +504,15 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="../index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Trang
                   chủ</a>
-                <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>Giới
+                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Giới
                   thiệu Us</a>
-                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i
+                <a class="text-secondary mb-2" href="birthday-cake-1-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Sản
                   phẩm</a>
-                <a class="text-secondary mb-2" href="contact.html"><i
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Liên
                   hệ</a>
               </div>
@@ -533,21 +533,47 @@
   </div>
   <!-- Footer End -->
 
-  <!-- POPUP Login Required -->
-  <div id="loginPopup" class="login-popup">
-    <div class="login-popup-content">
-      <h5>Đăng nhập để tiếp tục</h5>
-      <p>Bạn cần đăng nhập để thêm sản phẩm vào giỏ hàng.</p>
-      <div class="popup-buttons">
-        <button class="btn btn-primary" onclick="redirectToLogin()">
-          Đăng nhập
-        </button>
-        <button class="btn btn-secondary" onclick="closeLoginPopup()">
-          Hủy
-        </button>
+  <!-- Bootstrap Modal -->
+    <div
+      class="modal fade"
+      id="cartSuccessModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-center p-4">
+          <div class="modal-body">
+            <i
+              class="bi bi-check-circle-fill text-success"
+              style="font-size: 4rem"
+            ></i>
+            <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
+            <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
+            <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
+              OK
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const addToCartBtn = document.getElementById("addToCartBtn");
+        const modalEl = document.getElementById("cartSuccessModal");
+        const modalOkBtn = document.getElementById("modalOkBtn");
+
+        const successModal = new bootstrap.Modal(modalEl);
+
+        addToCartBtn.addEventListener("click", () => {
+          successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng
+        });
+
+        modalOkBtn.addEventListener("click", () => {
+          successModal.hide(); // Ẩn modal khi bấm OK
+        });
+      });
+    </script>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -584,41 +610,23 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const addToCartBtns = document.querySelectorAll(".add-to-cart-btn");
-      const loginPopup = document.getElementById("loginPopup");
+      const modalEl = document.getElementById("cartSuccessModal");
+      const modalOkBtn = document.getElementById("modalOkBtn");
 
-      // Giả lập trạng thái đăng nhập
-      const isLoggedIn = false;
+      const successModal = new bootstrap.Modal(modalEl);
 
       addToCartBtns.forEach((btn) => {
         btn.addEventListener("click", (event) => {
-          event.preventDefault(); // chặn hành động mặc định
-          console.log("Nút Thêm vào giỏ hàng được click"); // kiểm tra console
-          if (!isLoggedIn) {
-            // hiển thị popup đăng nhập
-            loginPopup.style.display = "flex";
-          } else {
-            alert("Đã thêm vào giỏ hàng!");
-          }
+          event.preventDefault(); // ngăn hành động mặc định
+          // Hiện modal "Thêm vào giỏ hàng thành công"
+          successModal.show();
         });
       });
+
+      modalOkBtn.addEventListener("click", () => {
+        successModal.hide(); // Ẩn modal khi bấm OK
+      });
     });
-
-    function closeLoginPopup() {
-      document.getElementById("loginPopup").style.display = "none";
-    }
-  </script>
-  <script>
-    function redirectToLogin() {
-      // Lấy URL trang hiện tại
-      const currentURL = window.location.href;
-      // Chuyển tới login.html kèm query param redirect
-      window.location.href =
-        "login.html?redirect=" + encodeURIComponent(currentURL);
-    }
-
-    function closeLoginPopup() {
-      document.getElementById("loginPopup").style.display = "none";
-    }
   </script>
 </body>
 
